src/objects/Corporate_Operations__c.object
<CustomObject>
    <fields>
        <fullName>Challenges_and_Setbacks_Lowlights__c</fullName>
        <label>Challenges &amp; Setbacks (Low-lights)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_level__c</fullName>
        <label>Confidence Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certain To Achieve Objectives(95%)</fullName>
                </value>
                <value>
                    <fullName>Likely To Achieve Objectives(75%)</fullName>
                </value>
                <value>
                    <fullName>Objectives Are Challenging(50%)</fullName>
                </value>
                <value>
                    <fullName>High Risk Of Missing Objectives(25%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <description>Link to the 9.40 Corp. Initiatives (Process)(Link) filtered by Process Name</description>
        <formula>HYPERLINK(&quot;/lightning/r/Report/00O44000003cgsp/view?fv1=&quot;&amp; Program_Name__r.Name , &quot;Open Suggestions&quot; ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggestions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Objectives_Next_Period__c</fullName>
        <label>Key Objectives Next Quarter</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Guidance__c</fullName>
        <label>Management Guidance</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Achievements_Highlights__c</fullName>
        <label>Positive Achievements (Highlights)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prgm__c</fullName>
        <formula>Program_Name__r.Process__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prgm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Two Letter Process Names (e.g. CT) or Three Letter Departmental Names (e.g. CLD)</inlineHelpText>
        <label>Program Name</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Periodic Report Forms</relationshipLabel>
        <relationshipName>Corporate_Operations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <formula>Program_Name__r.Process_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Created for case 332067</description>
        <label>Quarter</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY19Q2</fullName>
                </value>
                <value>
                    <fullName>FY19Q3</fullName>
                </value>
                <value>
                    <fullName>FY19Q4</fullName>
                </value>
                <value>
                    <fullName>FY20Q1</fullName>
                </value>
                <value>
                    <fullName>FY20Q2</fullName>
                </value>
                <value>
                    <fullName>FY20Q3</fullName>
                </value>
                <value>
                    <fullName>FY20Q4</fullName>
                </value>
                <value>
                    <fullName>FY21Q1</fullName>
                </value>
                <value>
                    <fullName>FY21Q2</fullName>
                </value>
                <value>
                    <fullName>FY21Q3</fullName>
                </value>
                <value>
                    <fullName>FY21Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_for_Management_Support__c</fullName>
        <label>Request For Management Support</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_End_Date__c</fullName>
        <formula>Sales_Period__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesPeriodKeyObjectivesResults__c</fullName>
        <label>Quarter &amp; Key Objectives Results</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>e.g. FY17 SP-09</inlineHelpText>
        <label>Sales Period</label>
        <referenceTo>Sales_Period__c</referenceTo>
        <relationshipLabel>Periodic Report Forms</relationshipLabel>
        <relationshipName>Corporate_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Versus_12_Weeks_Ago__c</fullName>
        <label>Status vs. 12 Weeks Ago (Δ LTW)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeding Goals(Highly Effective)</fullName>
                </value>
                <value>
                    <fullName>Meeting Goals(Effective)</fullName>
                </value>
                <value>
                    <fullName>Meeting Some Goals(Partially Effective)</fullName>
                </value>
                <value>
                    <fullName>Missing Most Goals(Deficient)</fullName>
                </value>
                <value>
                    <fullName>Non-Functional(Aspirational)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Periodic Report Form</label>
    <listViews>
        <fullName>All_Periodic_Report_Forms</fullName>
        <columns>NAME</columns>
        <columns>Sales_Period__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Program_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Quarter__c</columns>
        <columns>Prgm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quarter__c</field>
            <operation>equals</operation>
            <value>FY19Q4,FY20Q1,FY20Q2</value>
        </filters>
        <label>All Periodic Report Forms</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Periodic_report_Form</fullName>
        <columns>NAME</columns>
        <columns>Quarter__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Program_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Periodic Report Form</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CO# {00000000}</displayFormat>
        <label>Corporate Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Periodic Report Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Updates_at_Sales_Period_Closing</fullName>
        <active>false</active>
        <description>Record cannot be edited after the Sales Period is Closed</description>
        <errorConditionFormula>AND
(
NOT(ISNEW()),
OR(
ISCHANGED(Program_Name__c),
ISCHANGED(Sales_Period__c),
ISCHANGED(Status__c),
ISCHANGED(Initiatives__c),
ISCHANGED(SalesPeriodKeyObjectivesResults__c),
ISCHANGED(Positive_Achievements_Highlights__c),
ISCHANGED(Challenges_and_Setbacks_Lowlights__c),
ISCHANGED(Status_Versus_12_Weeks_Ago__c),
ISCHANGED(Key_Objectives_Next_Period__c),
ISCHANGED(Confidence_level__c),
ISCHANGED(Request_for_Management_Support__c)
),
TODAY() - Sales_Period__r.End_Date__c &gt;=  12,
$User.EmployeeNumber &lt;&gt; &apos;15308&apos;
)</errorConditionFormula>
        <errorMessage>This Periodic Report Form cannot be updated after the Sales Period is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Period_cannot_be_updated</fullName>
        <active>true</active>
        <description>Quarter cannot be updated after record is created.</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()), 
ISCHANGED(Quarter__c),
$User.EmployeeNumber &lt;&gt;&apos;13897&apos;, 
$User.EmployeeNumber &lt;&gt;&apos;13353&apos;, 
$User.EmployeeNumber &lt;&gt;&apos;14169&apos;
)</errorConditionFormula>
        <errorMessage>Quarter cannot be updated after the record is created.</errorMessage>
    </validationRules>
</CustomObject>